<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="@dimen/img_login_size"
        android:layout_height="@dimen/img_login_size"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/img_login" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameTV"
            android:hint="@string/username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTV"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:onClick="loginBtn"
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordET"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_btn"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:gravity="center"
        android:text="@string/you_don_t_have_an_account" />

    <Button
        android:onClick="signUpBtn"
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/sign_up_btn"
        android:text="Sign up"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


</LinearLayout>